changed main quiz to questions related with productivity

--- a/src/languages/bg-mainquiz.json
+++ b/src/languages/bg-mainquiz.json
@@ -1,134 +1,146 @@
 {
-    "yes": {
+    "first": {
         "questions": [
             {
-                "question": "На колко години сте?",
+                "question": "Кое от следните най-добре дефинира уменията, свързани с целенасоченост?",
                 "answers": [
-                    "0 - 16",
-                    "17 - 25",
-                    "26 - 50",
-                    "50 - Безкрайност"
+                    "\"Меки умения\"",
+                    "Конкретни умения за постигане на цели",
+                    "Техническа експертиза"
                 ]
             },
             {
-                "question": "Защо яснотата?",
+                "question": "Защо са от съществено значение уменията, свързани с целенасоченост в лично и професионално развитие?",
                 "answers": [
-                    "Улеснява нещата",
-                    "Яснотата си е яснота",
-                    "Защо не",
-                    "Нещо друго ..."
+                    "Необходими за успех",
+                    "Подобряват съсредоточаването и производителността",
+                    "Неприложими"
                 ]
             },
             {
-                "question": "От къде сте?",
+                "question": "Кое е пример за умение, свързано с целенасоченост?",
                 "answers": [
-                    "Планетата Земя",
-                    "Друга вселена",
-                    "Вие не знаете",
-                    "Нещо друго ..."
+                    "Управление на времето",
+                    "Случайни дейности",
+                    "Отлагане на задачи"
                 ]
             },
             {
-                "question": "Защо нашата Земя?",
+                "question": "Коя е подходящата стратегия за преодоляване на препятствия при целенасоченост?",
                 "answers": [
-                    "Най-доброто място за живеене",
-                    "Трябва да уча",
-                    "Да правя по-добри избори",
-                    "Нещо друго ..."
+                    "Пренебрегване на предизвикателствата",
+                    "Търсене на насоки и подкрепа",
+                    "Отказване от целта"
                 ]
             },
             {
-                "question": "Как мога да Ви помогна?",
+                "question": "Как уменията, свързани с целенасоченост, варират в различни области?",
                 "answers": [
-                    "Не можете",
-                    "Мога да се справя сам",
-                    "Има по-добри решения",
-                    "Мислите ли, че това си струва?"
+                    "Остават постоянни",
+                    "Приспособяват се към контекста",
+                    "Незначителни в различни области"
                 ]
             }
         ]
     },
-    "no": {
+    "second": {
         "questions": [
             {
-                "question": "Какъв е мащаба на сложността?",
+                "question": "С какво основно се свързва умението за дисциплина?",
                 "answers": [
-                    "Няма такова нещо",
-                    "Имахте предвид \"big O\" нотацията?",
-                    "Виж комплексен анализ",
-                    "Нещо друго ..."
+                    "Техническа експертиза",
+                    "Постоянство и самоконтрол",
+                    "Социална интелигентност"
                 ]
             },
             {
-                "question": "Има ли разлика между съставно и сложно?",
+                "question": "Защо е важна дисциплината при постигане на дългосрочни цели?",
                 "answers": [
-                    "Няма разлика",
-                    "Съставното е подредено, сложното не е",
-                    "Съставно - система | Сложно - жена",
-                    "Виж комплексен анализ"
+                    "Не е от значение",
+                    "Гарантира последователни усилия и концентрация",
+                    "Създава хаос"
                 ]
             },
             {
-                "question": "Защо не яснотата?",
+                "question": "Кое от следните е характерно за дисциплинирани личности/хора?",
                 "answers": [
-                    "Всичко е сложно",
-                    "Няма такова нещо",
-                    "Всичко е съставно",
-                    "Нещо друго ..."
+                    "Случайно поведение",
+                    "Непоследователност",
+                    "Стремеж и надеждност"
                 ]
             },
             {
-                "question": "Наред ли си?",
+                "question": "Кой е правилния подход за развитие на уменията за дисциплина?",
                 "answers": [
-                    "Да, наред съм",
-                    "Не, не съм",
-                    "Защо?",
-                    "Нещо друго ..."
+                    "Отлагане на задачи",
+                    "Задаване на ясни цели и краен срок",
+                    "Избягване на поставянето на цели"
+                ]
+            },
+            {
+                "question": "Как умението за дисциплина допринася за личния и професионален успех?",
+                "answers": [
+                    "Не прави разлика",
+                    "Подобрява производителността и надеждността",
+                    "Причинява стрес"
                 ]
             }
         ]
     },
-    "depends": {
+    "third": {
         "questions": [
             {
-                "question": "Може ли да ми дадете пример?",
+                "question": "Какво е основното предимство от изострянето на уменията за съсредоточаване/концентрация?",
                 "answers": [
-                    "Зависи от света",
-                    "Зависи от мен",
-                    "Няма значение",
-                    "Нещо друго ..."
+                    "Увеличена достъпност",
+                    "Подобрена производителност и ефективност",
+                    "Непроменена производителност"
                 ]
             },
             {
-                "question": "Защо зависимостта?",
+                "question": "Коя от следните е характеристика на лица с умения за съсредоточаване/концентрация?",
                 "answers": [
-                    "По този начин системата е по-интересна",
-                    "Няма зависимост",
-                    "Какво?",
-                    "Нещо друго ..."
+                    "Разпиляно мислене",
+                    "Затруднения при завършване на задачи",
+                    "Способност да се задържа на задача с минимални разсейвания"
                 ]
             },
             {
-                "question": "Колебаете ли се за нещо?",
+                "question": "Как може да се подобрят уменията за съсредоточаване/концентрация?",
                 "answers": [
-                    "Аз съм стабилен",
-                    "Няма такова нещо",
-                    "Аз съм уверен",
-                    "Може би"
+                    "Паралелна обработка на задачи",
+                    "Редовни почивки и отклонения",
+                    "Техники за съзнателност и минимизиране на разсейващи фактори"
+                ]
+            },
+            {
+                "question": "Кой е подходящия отговор за поддържане на съсредоточаване по време на предизвикателна задача?",
+                "answers": [
+                    "Постоянно проверяване на телефона и имейлите",
+                    "Редовни почивки",
+                    "Задържане на вниманието и минимизиране на прекъсванията"
+                ]
+            },
+            {
+                "question": "По какъв начин подобренията при съсредоточаване/концентрация допринасят за личния и професионален успех?",
+                "answers": [
+                    "Няма значителен ефект",
+                    "Подобрено вземане на решения и завършване на задачи",
+                    "Увеличаване на хаоса и дезорганизацията"
                 ]
             }
         ]
     },
     "messages": {
-        "success": "Вие отговорихте на всички въпроси. Поздравления! Печелите дъвка с няколко стотинки!"
+        "success": "Вие отговорихте на всички въпроси. Поздравления! Отговорите говорят сами за себе си."
     },
     "times": {
         "list": [
             "Първи път",
             "Втори път",
             "Трети път",
-            "Мисля, че е достатъчно",
-            "Наред ли си? Пети път"
+            "Четвърти път",
+            "Пети път"
         ]
     },
     "stats": {
