--- a/src/languages/bg.json
+++ b/src/languages/bg.json
@@ -1,25 +1,24 @@
 {
     "header": {
-        "titleFirstPart": "Порт",
-        "titleSecondPart": "фолио",
-        "mainQuestion": "Важна ли е",
-        "mainQuestionAccentWord": "яснотата",
-        "mainAnswersYes": "Да",
-        "mainAnswersNo": "Не",
-        "mainAnswersDepends": "Зависи"
+        "title": "Добре Дошли",
+        "mainQuestion": "Какво означава",
+        "mainQuestionAccentWord": "постигане на резултати",
+        "mainAnswerFirst": "Целенасоченост",
+        "mainAnswerSecond": "Дисциплина",
+        "mainAnswerThird": "Съсредоточаване"
     },
     "answers": {
-        "yes": {
-            "title": "Да",
-            "description": "Яснотата е едно от най-важните неща в нашия живот. По този начин е улеснено ученето, работата и печеленето."
+        "first": {
+            "title": "Целенасоченост",
+            "description": "Когато има ясна цел, инструментите за постигането й се намират лесно. При насочване към целта, резултатите идват по-бързо."
         },
-        "no": {
-            "title": "Не",
-            "description": "Сложното и смесеното са в противоположност на яснотата. Разбирането на сложното и смесеното, яснотата се задълбочава."
+        "second": {
+            "title": "Дисциплина",
+            "description": "Дисциплина и постоянство вървят заедно. Постигането на резултати с тях изключително се улеснява."
         },
-        "depends": {
-            "title": "Зависи",
-            "description": "Да, има различни фактори, които правят яснотата да зависи. Един от факторите е възприятието."
+        "third": {
+            "title": "Съсредоточаване",
+            "description": "Едно от най-важните качества за постигане на резултати. Задълбочаването върху решение на задача изисква съсредоточеност/концентрация."
         },
         "learnMore": "Научи повече"
     }
