changed about component with two columns for extra info

--- a/src/languages/bg-about.json
+++ b/src/languages/bg-about.json
@@ -3,7 +3,8 @@
     "intro": "Името ми е Николай. Обичам да пиша код и да разрешавам задачи.",
     "subintro": {
         "title": "Допълнително инфо",
-        "description": "Често пия кафе ( старая се да не е в промишлени количества ). Спортувам - ходя на лостове . Гледам децата си ( шегичка ). Имам интереси свързани с изработката на анимации в уеб приложения. В областта на анимациите има много за учене ( казах ли много ), което ме вдъхновява и кара да се развивам всеки ден."
+        "descriptionFirst": "Често пия кафе ( старая се да не е в промишлени количества ). Спортувам - ходя на лостове . Гледам децата си ( шегичка ).",
+        "descriptionSecond": " Имам интереси свързани с изработката на анимации в уеб приложения. В областта на анимациите има много за учене ( казах ли много ), което ме вдъхновява и кара да се развивам всеки ден."
     },
     "techStack": "Технологичен стек",
     "tech": {
