--- a/src/languages/en-about.json
+++ b/src/languages/en-about.json
@@ -3,7 +3,8 @@
     "intro": "My name is Nikolai. I love to write code and to resolve problems.",
     "subintro": {
         "title": "Extra info",
-        "description": "I frequently drink coffee ( trying not to drink in production quantities ). I workout - street workout . Watching my kids ( joking ). Interest and passion related with developing animations in web apps. In the domain of animations, there is a lot to learn ( did I mention a lot ), which inspires me and fuel me to progress up each day."
+        "descriptionFirst": "I frequently drink coffee ( trying not to drink in production quantities ). I workout - street workout . Watching my kids ( joking ).",
+        "descriptionSecond": " Interest and passion related with developing animations in web apps. In the domain of animations, there is a lot to learn ( did I mention a lot ), which inspires me and fuel me to progress up each day."
     },
     "techStack": "Technology Stack",
     "tech": {
