responsiveness on mobile view

--- a/src/languages/bg-about.json
+++ b/src/languages/bg-about.json
@@ -4,7 +4,8 @@
     "subintro": {
         "title": "Допълнително инфо",
         "descriptionFirst": "Често пия кафе ( старая се да не е в промишлени количества ). Спортувам - ходя на лостове . Гледам децата си ( шегичка ).",
-        "descriptionSecond": " Имам интереси свързани с изработката на анимации в уеб приложения. В областта на анимациите има много за учене ( казах ли много ), което ме вдъхновява и кара да се развивам всеки ден."
+        "descriptionSecond": " Имам интереси свързани с изработката на анимации в уеб приложения. В областта на анимациите има много за учене ( казах ли много ), което ме вдъхновява и кара да се развивам всеки ден.",
+        "description": "Често пия кафе ( старая се да не е в промишлени количества ). Спортувам - ходя на лостове . Гледам децата си ( шегичка ). Имам интереси свързани с изработката на анимации в уеб приложения. В областта на анимациите има много за учене ( казах ли много ), което ме вдъхновява и кара да се развивам всеки ден."
     },
     "techStack": "Технологичен стек",
     "tech": {
