--- a/src/languages/en-about.json
+++ b/src/languages/en-about.json
@@ -4,7 +4,8 @@
     "subintro": {
         "title": "Extra info",
         "descriptionFirst": "I frequently drink coffee ( trying not to drink in production quantities ). I workout - street workout . Watching my kids ( joking ).",
-        "descriptionSecond": " Interest and passion related with developing animations in web apps. In the domain of animations, there is a lot to learn ( did I mention a lot ), which inspires me and fuel me to progress up each day."
+        "descriptionSecond": " Interest and passion related with developing animations in web apps. In the domain of animations, there is a lot to learn ( did I mention a lot ), which inspires me and fuel me to progress up each day.",
+        "description": "I frequently drink coffee ( trying not to drink in production quantities ). I workout - street workout . Watching my kids ( joking ). Interest and passion related with developing animations in web apps. In the domain of animations, there is a lot to learn ( did I mention a lot ), which inspires me and fuel me to progress up each day."
     },
     "techStack": "Technology Stack",
     "tech": {
